Fix inview issue on mobile

--- a/styles/_cards.scss
+++ b/styles/_cards.scss
@@ -121,7 +121,7 @@
       grid-template-columns: repeat(10, 80%);
       gap: 1rem;
       margin: 0 -1rem;
-      padding: 1rem 0;
+      padding: 2rem 0;
       scroll-padding: 1rem;
       overflow-x: auto;
       scroll-snap-type: x mandatory;
@@ -156,7 +156,7 @@
 
     .marquee-inner {
       font-size: 16vw;
-      transform: translateX(-20%);
+      animation: MarqueeMove 45s linear infinite;
     }
 
     .marquee {
@@ -165,8 +165,22 @@
       }
 
       &.two {
-        top: 21%
+        top: 21%;
       }
     }
+  }
+}
+
+@keyframes MarqueeMove {
+  0% {
+    transform: translateX(0);
+  }
+
+  50% {
+    transform: translateX(-80%);
+  }
+
+  100% {
+    transform: translateX(0);
   }
 }
