--- a/styles/_headlines.scss
+++ b/styles/_headlines.scss
@@ -196,7 +196,9 @@
 
 @media (max-width: $breakpoint-md) {
   .headlines {
-    .article-1, .article-3, .article-4 {
+    .article-1,
+    .article-3,
+    .article-4 {
       grid-template-columns: 1fr;
       margin-top: .8em;
       margin-bottom: .8em;
@@ -205,6 +207,18 @@
 
     .newspaper-page {
       padding: 3.5vw;
+    }
+
+    .section-header,
+    .headline span,
+    .source-logo,
+    .article-video,
+    .article-3 p {
+      opacity: 1;
+    }
+
+    .line {
+      width: 100%;
     }
 
     .article {
